--- a/EnjoyTrip/src/main/resources/application.properties
+++ b/EnjoyTrip/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/ssafyweb?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://localhost:3306/enjoytrip?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
 spring.datasource.username=ssafy
 spring.datasource.password=ssafy
 
-mybatis.type-aliases-package=com.ssafy.*.model
+mybatis.type-aliases-package=com.ssafy.**.dto;
 mybatis.mapper-locations=mapper/*.xml
