fix. 여행 플래너 생성 로직 수정 - 파일 업로드 로직 추가

--- a/EnjoyTrip/src/main/resources/application.properties
+++ b/EnjoyTrip/src/main/resources/application.properties
@@ -9,4 +9,5 @@ mybatis.mapper-locations=mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
 logging.level.root=info
+#file.dir=
 # logging.level.com.com.ssafy.enjoytrip=debug
