--- a/EnjoyTrip/src/main/resources/application.properties
+++ b/EnjoyTrip/src/main/resources/application.properties
@@ -1,8 +1,3 @@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/enjoytrip?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
-spring.datasource.username=ssafy
-spring.datasource.password=ssafy
-
 mybatis.type-aliases-package=com.ssafy.**.dto
 mybatis.mapper-locations=mapper/*.xml
 
@@ -11,3 +6,5 @@ mybatis.configuration.map-underscore-to-camel-case=true
 logging.level.root=info
 #file.dir=
 # logging.level.com.com.ssafy.enjoytrip=debug
+
+spring.profiles.include=db
