--- a/EnjoyTrip/pom.xml
+++ b/EnjoyTrip/pom.xml
@@ -52,6 +52,13 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 		</dependency>
+
+		<!-- 23.05.03 S3 위한 설정 추가-->
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>s3</artifactId>
+			<version>2.17.100</version>
+		</dependency>
 	</dependencies>
 
 	<build>
