--- a/EnjoyTrip/pom.xml
+++ b/EnjoyTrip/pom.xml
@@ -59,6 +59,12 @@
 			<artifactId>s3</artifactId>
 			<version>2.17.100</version>
 		</dependency>
+
+		<!-- 23.05.04 Spring Security 의존성 추가 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
