--- a/EnjoyTrip/pom.xml
+++ b/EnjoyTrip/pom.xml
@@ -61,11 +61,11 @@
 		</dependency>
 
 		<!-- 23.05.04 Spring Security 의존성 추가 -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-			<version>2.7.11</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-security</artifactId>-->
+<!--			<version>2.7.11</version>-->
+<!--		</dependency>-->
 
 		<!-- 23.05.05 JWT 의존성 추가 -->
 		<dependency>
@@ -87,12 +87,18 @@
 		</dependency>
 
 		<!-- 23.05.05 OAuth 확장 대비 추가 -->
-		<dependency>
-			<groupId>org.springframework.security.oauth</groupId>
-			<artifactId>spring-security-oauth2</artifactId>
-			<version>2.5.1.RELEASE</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.security.oauth</groupId>-->
+<!--			<artifactId>spring-security-oauth2</artifactId>-->
+<!--			<version>2.5.1.RELEASE</version>-->
+<!--		</dependency>-->
 
+		<!-- 23.05.11 PassWord Encode 추가 -->
+		<dependency>
+			<groupId>org.mindrot</groupId>
+			<artifactId>jbcrypt</artifactId>
+			<version>0.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
