fix. 중간발표 수정

--- a/EnjoyTrip/src/main/resources/application.properties
+++ b/EnjoyTrip/src/main/resources/application.properties
@@ -1,10 +1,9 @@
+server.address=0.0.0.0
+
 mybatis.type-aliases-package=com.ssafy.**.dto
 mybatis.mapper-locations=mapper/*.xml
-
 mybatis.configuration.map-underscore-to-camel-case=true
 
 logging.level.root=info
-#file.dir=
-# logging.level.com.com.ssafy.enjoytrip=debug
 
 spring.profiles.include=db
